# completion-auto

./: .gitignore  Cargo.toml  README.md  dependances.txt
.git_blacklisted_20250128_153729_ITnstmcgCa/: COMMIT_EDITMSG  FETCH_HEAD  index
.git_blacklisted_20250217_223843_QQMcP5Jo2e/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
completion-system/: Cargo.toml  Makefile  README.fr.md  README.md  competion-system.desktop  fonctionnement.md  levenshtein.py
completion-system/data/: dico_freq.csv
completion-system/src/: gui.py  keylogger.rs  levenshtein.rs  main.rs  main_conflict_20250211_200150_T3mzfzrOiW.rs  mouselogger.rs  offset.rs  python_gui.rs  suggestions.rs  trie_suggestions.rs  virtual_input.rs
completion-system/tools/: dico_freq.csv  format_dico.py
completion-system/training/: Cargo.toml
completion-system/training/src/: main.rs  mouselogger.rs
docs/: .~lock.completion_automatique.docx#  Complétion automatique.docx  completion_auto.docx  completion_auto.odt  completion_automatique_conflict_20250128_153508_FwFfIKvk6I.docx  doc_technique.tex  extrait-fichier-clavier.txt  oral.nav  oral.tex  pseudo-code.txt  references.bib  report.lof  report.tex  report_conflict_20250128_153508_lrsWM5hmKC.tex  watch_tex.py
docs/doc_technique/: doc_technique.tex
docs/parties_modele/: conclusion.tex  deroulement.tex  intro.tex
docs/parties_oral/: algo_distance.tex  approches.tex  conclusion.tex  implem.tex  intro.tex  markov.tex
docs/src/oral/: intro.tex  (+2 more)
docs/test_uml/: example.tex  uml.tex
uinput-test/: Cargo.toml
uinput-test/src/: main.rs
(+17 files in other folders)
