[package]
name = "completion-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
uinput = "0.1.3"
udev = "0.7"
nix = "0.27"
pyo3 = { version = "0.18", features = ["extension-module"] }
rand = "0.8"