[package]
name = "completion-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
uinput = "0.1.3"
udev = "0.7"
nix = { version = "0.27", features = ["poll"] }
pyo3 = { version = "0.18", features = ["extension-module"] }
rand = "0.8"
tempfile = "3.17.1"
libc = "0.2.170"
